--- a/index.html
+++ b/index.html
@@ -58,36 +58,36 @@
       </div>
       <div class="service-bottom">
         <div class="service-item">
-   <img src="./blk.jpg" alt="img">
+   <img src="blk.jpg" alt="img">
           <h2>Desain Grafis</h2>
           <p>Blkk Daarul Ilmi</p>
         </div>
         <div class="service-item">
-   <img src="./blkk.jpg" alt="img">
+   <img src="blkk.jpg" alt="img">
           <h2>Servis Sepeda Motor Injeksi</h2>
           <p>Blkk Provinsi Jawa Barat</p>
         </div>
         <div class="service-item">
-   <img src="./bnsp.jpg" alt="img">
+   <img src="bnsp.jpg" alt="img">
           <h2>Teksini Servis sepeda motor Injeksi</h2>
           <p>BNSP & LSP - TO</p>
         </div>
         <div class="service-item">
-   <img src="./magang.jpg" alt="img">
+   <img src="magang.jpg" alt="img">
           <h2>magang warehouse</h2>
           <p>BT. Batik Trusmi</p>
         </div>
           <div class="service-item">
-   <img src="./komputer.jpg" alt="img"><h2>Teknisi komputer</h2>
+   <img src="komputer.jpg" alt="img"><h2>Teknisi komputer</h2>
           <p>Suvi Training</p>
         </div>
   <div class="service-item">
-   <img src="./word.jpg" alt="img">
+   <img src="word.jpg" alt="img">
           <h2>Microsoft Word</h2>
           <p>Pijar Mahir</p>
         </div>
   <div class="service-item">
-   <img src="./excel.jpg" alt="img">
+   <img src="excel.jpg" alt="img">
           <h2>Microsoft excel</h2>
           <p>Pijar Mahir</p>
         </div>
