--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
           </div>
           <ul>
             <li><a href="#hero" data-after="Home">Home</a></li>
-            <li><a href="#services" data-after="Service">Pelatihan</a>
-            <a>Sertifikasi</a></li>
+            <li><a href="#services" data-after="Service">Pelatihan<br>Sertifikasi</a</li>
             <li><a href="#projects" data-after="Projects">Pengalaman</a></li>
             <li><a href="#about" data-after="About">About me</a></li>
             <li><a href="#contact" data-after="Contact">Contact</a></li>
